log/build_2021-04-23_13-40-47/srv_examples/stderr.log
  File "/home/mark-ros2/ROS2_tutorials/install/srv_examples/lib/python3.8/site-packages/srv_examples/close_gripper_service_server.py", line 17
    open.gripper.call_async(SetBool.Data = true)
                            ^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?

